# strato-acme

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-python-package.yml  ci.yml  docker-image.yml  release-python-package.yml  release.yml
docker/: Dockerfile  build.sh  docker-compose.yml  run.sh
samples/: strato-acme-config.json.sample
scripts/: version_changelog.py
src/acme_plugin/: dns_strato.sh
src/scripts/: create-new-wildcard-cert.sh  entrypoint.sh
src/strato_dns_api/: __main__.py  strato_dns_api.py  strato_dns_api_credentials.py
